<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2pt"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/calculator_type_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:gravity="top|right"
        android:importantForAutofill="no"
        android:textSize="20pt"
        tools:ignore="LabelFor,RtlHardcoded"
        android:inputType="text" />

    <EditText
        android:id="@+id/calculatorResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:gravity="top|right"
        android:importantForAutofill="no"
        android:textSize="20pt"
        tools:ignore="LabelFor,RtlHardcoded"
        android:inputType="text" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_AC"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/anthracite"
                android:text="@string/ac"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_Delete"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/anthracite"
                android:text="@string/del"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_plus"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="0.37"
                android:background="@color/anthracite"
                android:text="@string/Plus"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0pt">

            <Button
                android:id="@+id/button_7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/anthracite"
                android:text="@string/_7"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_8"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/anthracite"
                android:text="@string/_8"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_9"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/anthracite"
                android:text="@string/_9"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_minus"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/anthracite"
                android:text="@string/Minus"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0pt">

            <Button
                android:id="@+id/button_4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/anthracite"
                android:text="@string/_4"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/anthracite"
                android:text="@string/_5"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_6"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/anthracite"
                android:text="@string/_6"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_multiply"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/anthracite"
                android:text="@string/Multiply"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0pt">

            <Button
                android:id="@+id/button_1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/anthracite"
                android:text="@string/_1"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/anthracite"
                android:text="@string/_2"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/anthracite"
                android:text="@string/_3"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_divide"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/anthracite"
                android:text="@string/Divide"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_mode"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/anthracite"
                android:text="@string/CurrencyConverter"/>

            <Button
                android:id="@+id/button_0"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/anthracite"
                android:text="@string/_0"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_dot"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/anthracite"
                android:text="@string/Dot"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/button_equal"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/anthracite"
                android:text="@string/Equal"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

    </TableLayout>
</LinearLayout>